added landing page, sign up and login

--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,4 @@
-<h1>Hello World</h1>
-<p>See Me in views/static/index.html.erb</p>
+HI! Welcome to Quora Copycat
+<a href="/signup" >sign up</a>
+or
+<a href= "/login">log-in</a>
