added login, logout and sessions

--- a/app/views/login_page.erb
+++ b/app/views/login_page.erb
@@ -1,6 +1,6 @@
 <form action "/login" method= "post">
     <h3>Email:</h3>
-     <input type = "text" name = "user[user_email]" placeholder = "email">
+     <input type = "text" name = "user[email]" placeholder = "email">
     <h3>Password:</h3>
      <input type = "password" name = "user[password]" placeholder = "password">
         <br/>
